--- a/Localization/English/chair_spell.xml
+++ b/Localization/English/chair_spell.xml
@@ -6,13 +6,13 @@
     <content contentuid="h6d724af4gd6a4g482cgafe7gc387ebf3f599" version="1">UNINSTALL INSTRUCTIONS</content>
     <content contentuid="h20da1db9g3259g4fe9gae59gbee1b476d1f6" version="1">Use either THIS spell or Cleanup All once before removing the mod from your load order, to purge stored gameobject data. Dont spawn any more furniture after this, otherwise you won't be able to load your save again!</content>
 
-    <content contentuid="hc7a70aacg57d2g4238gb6a4g60e8e1be86e1" version="1">Sit Happens - Utils</content>
+    <content contentuid="hc7a70aacg57d2g4238gb6a4g60e8e1be86e1" version="1">COCK - Utils</content>
     <content contentuid="hededdd5dgaef1g49c8ga338gec2cbd786b36" version="1">Need a clean up or is your favourite chair always falling over?</content>
 
-    <content contentuid="h85e56ac7gb9fag4b72ga23ag8bf353ee97e5" version="1">Sit Happens - Chairs</content>
+    <content contentuid="h85e56ac7gb9fag4b72ga23ag8bf353ee97e5" version="1">COCK - Chairs</content>
     <content contentuid="hc21dc97bgd286g4bb9g9031gcf326d508282" version="1">Everyone needs a break!</content>
 
-    <content contentuid="hd5e63d5egd57dg46e0g9ee3g5652459b0789" version="1">Sit Happens - Benches</content>
+    <content contentuid="hd5e63d5egd57dg46e0g9ee3g5652459b0789" version="1">COCK - Benches</content>
     <content contentuid="hb5ad847fg1718g4740g9b55gad70eb1a37bc" version="1">Everyone needs a break! With space for friends!</content>
 
     <content contentuid="hd106de78gde49g47bfg8998g505c06bfcc22" version="1">Cleanup ALL</content>
