--- a/Localization/English/DECOR_spells.xml
+++ b/Localization/English/DECOR_spells.xml
@@ -6,14 +6,8 @@
     <content contentuid="h6d724af4gd6a4g482cgafe7gc387ebf3f599" version="1">UNINSTALL INSTRUCTIONS</content>
     <content contentuid="h20da1db9g3259g4fe9gae59gbee1b476d1f6" version="1">Use either THIS spell or Cleanup All once before removing the mod from your load order, to purge stored gameobject data. Dont spawn any more objects after this, otherwise you won't be able to load your save again!</content>
 
-    <content contentuid="hc7a70aacg57d2g4238gb6a4g60e8e1be86e1" version="1">COCK - Utils</content>
+    <content contentuid="hc7a70aacg57d2g4238gb6a4g60e8e1be86e1" version="1">DECOR - Utils</content>
     <content contentuid="hededdd5dgaef1g49c8ga338gec2cbd786b36" version="1">Need a clean up or is your favourite chair always falling over?</content>
-
-    <content contentuid="h85e56ac7gb9fag4b72ga23ag8bf353ee97e5" version="1">COCK - Chairs</content>
-    <content contentuid="hc21dc97bgd286g4bb9g9031gcf326d508282" version="1">Everyone needs a break!</content>
-
-    <content contentuid="hd5e63d5egd57dg46e0g9ee3g5652459b0789" version="1">COCK - Benches</content>
-    <content contentuid="hb5ad847fg1718g4740g9b55gad70eb1a37bc" version="1">Everyone needs a break! With space for friends!</content>
 
     <content contentuid="hd106de78gde49g47bfg8998g505c06bfcc22" version="1">Cleanup ALL</content>
     <content contentuid="hf33e86c8g49fag46c7gb6cag333d1148e35d" version="1">Removes all spawned objects and possible debris.</content>
@@ -26,7 +20,10 @@
 
     <!-- Custom Objects -->
     
-    <content contentuid="hdcc11ffdgcf24g4888gaf6bg9b5f4fc57385" version="1">COCK_Test</content>
-    <content contentuid="h9258180cg2841g4a3dg8365g368df2c7e659" version="1">Spawns a test object.</content>
+    <content contentuid="ha5c318c8g99b2g4b24ga50cgd1d2a96cc527" version="1">DECOR_Test</content>
+    <content contentuid="h6fa26361g4de7g4593gbdd8g3ce358745d43" version="1">Spawns a test object.</content>
+
+    <content contentuid="h56e77cd4gd253g4a32g9cd2g1e5572124724" version="1">Froggy Chair</content>
+    <content contentuid="hdbb47837g8f0cg42e4g8b8fgde193dd54c10" version="1">Ribbit.</content>
     
 </contentList>
